# huawei_commision

./: .env_template  .gitignore  db.sqlite3  db.sqlite3_b  db_bc.sqlite3  manage.py  output.py  pyproject.toml  readme.md  run_server.bat
acc/: alarms_ms.py  connection.py  main.py  software.py  state.py
acc/output/: output.py
atn/: connection.py
commision/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
commision/migrations/: 0001_initial.py  0002_command_for_device.py  0003_category_command_category.py  0004_alter_command_category.py  0005_rename_text_command_command_alter_command_category.py  0006_command_check_exclude_command_check_include_and_more.py  0007_alter_command_check_exclude_and_more.py  0008_rename_check_exclude_command_false_if_include_and_more.py  0009_alter_command_false_if_include_and_more.py  0010_command_ok_if_exclude_alter_command_false_if_include_and_more.py  0011_remove_command_false_if_include_and_more.py  0012_autonomicsystem.py  0013_vendor_alter_command_category_device_vendor.py
huawei_dj/: asgi.py  settings.py  urls.py  wsgi.py
n3com/: connection.py  n3com.py
parsers/table_parser/: __init__.py  abstract_line_parser.py  exceptions.py  table.py  table_parser.py
parsers/treeparser/: parser_builder.py
static/: script.js  style.css
static/js/: dataLoader.js  script.js
static/root/: style.css
static/root/js/: script.js
table_parser/scanner/: __init__.py
table_parser/table_line_parsers/: __init__.py  colum_position_parser.py
templates/: base.html
treeparser/: config_parser.py
(+14 files in other folders)
